<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/choose_sources_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:titleTextColor="@android:color/white"
            android:textAlignment="textStart"
            android:elevation="@dimen/toolbar_elevation" />

        <android.support.design.widget.TabLayout
            app:layout_constraintTop_toBottomOf="@+id/choose_sources_toolbar"
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/sources_container"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_no_items_selected"
                android:textColor="#fff"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/selected_label"
                android:textAlignment="center"
                android:textSize="18sp" />

            <Button
                android:id="@+id/clear_all_label"
                android:textAllCaps="false"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/clear_all_label"
                android:textSize="18sp" />

            <Button
                android:id="@+id/done_label"
                android:textAllCaps="false"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/done_label"
                android:textSize="18sp" />


        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>

